--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,6 @@
 
 .App {
   background-color: darkgray;
-  height: 100dvh;
-  min-height: 297mm;
   page-break-inside: avoid;
   display: flex;
   align-items: center;
@@ -17,17 +15,27 @@
 .a4 {
   background-color: white;
   height: 297mm;
+  max-height: 297mm;
+  min-height: 297mm;
   width: 210mm;
+  max-width: 210mm;
+  min-width: 210mm;
   margin: auto;
   display: flex;
 }
 .left_kol {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: whitesmoke;
   height: 297mm;
   width: 40%;
 
 }
 .right_kol {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: white;
   height: 297mm;
   width: 60%;
@@ -51,6 +59,7 @@
   margin-left:30px;
   color: #566573;
   print-color-adjust: exact;
+
 }
 .ubuntu_medium_main {
   font-family: "Ubuntu", sans-serif;
@@ -61,7 +70,6 @@
   margin-left:30px;
 }
 .irem_madran {
-  margin-top:240px;
   margin-left:30px;
   color: #212F3D;
   font-size: 43px;
@@ -81,7 +89,6 @@
 }
 .main_title {
   margin-left:30px;
-  margin-top: 7px;
   color: #F1C40F;
   font-size: 20px;
 
